# vibe_dsl

./: .gitignore  AGENTS.md  CHANGES_SUMMARY.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION_STATUS.md  README.md  STATUS_REPORT.md  TT_Metal_Documentation_Summary.md  setup_tilelang.sh  setup_tt_metal.sh  tasks.md  test_blackhole_ir.py  test_blackhole_status.py  test_buffer_scope.py  test_calling_conv.py  test_codegen.py  test_copy_kernel.py  test_copy_shared.py  test_debug_blackhole_passes.py  test_debug_codegen.py  test_debug_codegen2.py  test_debug_filter.py  test_debug_lower.py  test_debug_lower2.py  test_debug_lower3.py  test_debug_mod.py  test_full_kernel.py  test_ir_structure.py  test_kernel_source.py  test_lower_debug.py  test_official_ttsim.cpp  test_simple_blackhole.py  test_trace_lower.py  test_trace_passes.py  test_trace_target.py  test_ttsim_full  test_ttsim_minimal  test_ttsim_minimal.cpp  test_ttsim_workers.cpp
docs/: README.md  ttsim_setup.md
docs/skills/: using-superpowers-analysis.md
docs/superpowers/plans/: 2026-04-06-phase-b-spatial-program-ir.md  2026-04-07-spatial-strong-contract-phase-c-bridge.md  2026-04-16-blackhole-final-legacy-protocol-cleanup.md
docs/tilelang/: ANALYSIS_COMPLETE.md  README.md  benchmark.md  testing.md
docs/tilelang/advanced/: 01_autodd.md  02_autotuner.md  03_profiler.md  04_quantization.md  05_analysis.md  06_carver.md
docs/tilelang/cpp_core/: 01_ir_definition.md  03_layout_system.md  04_target_backends.md  05_runtime.md  06_templates.md
docs/tilelang/examples/: 01_basic_examples.md  02_flash_attention.md  03_linear_attention.md  04_deepseek_mla.md  05_dequantize_gemm.md  06_other_examples.md
docs/tilelang/jit/: 01_jit_core.md  02_tvm_ffi_adapter.md  03_cutedsl_adapter.md  04_nvrtc_adapter.md  05_cython_adapter.md
docs/tilelang/python_core/: 01_package_init.md  04_transform.md
docs/tt_metal/: README.md  TT_Metalium_Complete_Reference.md  advanced_topics_collection.md  api_reference_scraped.md  appendices.md  doc_comparison_analysis.md  document_outline.md  examples_source_analysis.md  gap_analysis.md  github_repo_structure.md  header_api_extraction.md  official_docs_structure.md  programming_examples_collection.md  section_architecture.md  section_circular_buffer_api.md  section_compute_api.md  section_core_concepts.md  section_data_movement_api.md  section_debugging_tools.md  section_host_api.md  section_performance_optimization.md  section_programming_examples.md  source_verification_report.md
docs/tt_metal/guide/: TT_Metalium_完整指南_v2.0.md
docs/tt_metal/source_analysis/: README.md  api.md  common_modules.md  config_and_root.md  distributed.md  fabric.md  hw.md  impl.md  jit_build.md  kernels.md  llrt.md  programming_examples.md  test.md  tools.md
memory/: bugs.md  general_dev.md  tt_simulator_constraints.md
scripts/: build_blackhole_runner.sh  build_blackhole_stack.sh  run_tt_sim_add_test.sh  setup_tt_sim.sh
tasks/: arch_design.md  design_review.md  progress.md  tilelang_analysis_plan.md
tasks/dev_design/: 2026-03-26-blackhole-tvm-ffi-wrapper-export-blocker-implementation-plan.md  2026-03-26-blackhole-tvm-ffi-wrapper-export-blocker.md  2026-03-26-stage3-gemm-multicore-direct-hang-implementation-plan.md  2026-03-26-stage3-gemm-multicore-direct-hang.md  2026-03-31-flash-attention-forward-subset-implementation-plan.md  2026-04-01-flash-attn-ttmetal-first-compute-redesign-implementation-plan.md  2026-04-01-flash-attn-ttmetal-first-compute-redesign.md  2026-04-02-stateful-tiled-ir-phase1-implementation-plan.md  2026-04-16-blackhole-final-legacy-protocol-cleanup-task0.md  2026-04-16-blackhole-final-legacy-protocol-cleanup-task1.md  2026-04-16-blackhole-final-legacy-protocol-cleanup-task2.md  2026-04-16-blackhole-final-legacy-protocol-cleanup-task3.md  2026-04-16-blackhole-final-legacy-protocol-cleanup-task4.md  2026-04-16-blackhole-final-legacy-protocol-cleanup-task5.md  2026-04-16-blackhole-final-legacy-protocol-cleanup.md  2026-04-23-blackhole-live-form-materialization-admission.md  2026-04-27-blackhole-post-preservation-pass-shrink.md  2026-04-27-blackhole-tile-compute-preservation.md  2026-04-28-blackhole-algorithmic-generalization.md  2026-04-28-blackhole-lower-tile-op-normalizer-dedup.md  2026-04-28-blackhole-tile-compute-legalizer-dag-covering.md  2026-04-29-blackhole-resource-planning-roadmap.md  2026-05-02-blackhole-tensor-sharding-and-reshard.md  2026-05-03-blackhole-t4-t5-accessor-and-sharded-gemm.md  2026-05-03-blackhole-t6-topk.md  2026-05-05-blackhole-exact-cb-liveness-allocation.md  2026-05-05-blackhole-t8-irregular-indexed-access.md  README.md  blackhole_architecture_review_and_action_plan.md  blackhole_first_principles_protocol_audit.md  final_blackhole_backend_redesign.md  ir_layering_root_cause_and_direction.md  layered_ir_references.md  legacy_blackhole_runtime_architecture.md  phase0_tilelang_blackhole_config.md  phase0_tilelang_setup.md  phase0_tt_metal_build.md  phase0_tt_sim_build.md  phase1_codegen_framework.md  phase1_runtime_framework.md  (+42 more)
tasks/dev_design/archive/: 2026-03-26-blackhole-tvm-ffi-wrapper-export-blocker.md  2026-03-26-stage2d-gemm-contract-implementation-plan.md  2026-03-26-stage3-gemm-multicore-direct-hang.md  2026-03-26-stage3-multicore-implementation-plan.md  2026-03-27-accessor-crta-implementation-plan.md  2026-03-27-compile-time-abi-implementation-plan.md  2026-04-02-stateful-tiled-ir-phase1-implementation-plan.md  2026-04-16-blackhole-final-legacy-protocol-cleanup-task0.md  2026-04-16-blackhole-final-legacy-protocol-cleanup-task1.md  2026-04-16-blackhole-final-legacy-protocol-cleanup-task2.md  2026-04-16-blackhole-final-legacy-protocol-cleanup-task4.md  README.md  layered_ir_references.md  phase0_tilelang_blackhole_config.md  phase0_tt_metal_build.md  phase_b_code_audit.md  (+16 more)
tests/transform/: test_assign_blackhole_cores.cc  test_plan_blackhole_cb.cc  test_split_blackhole_kernel.cc
tests/tt_sim/: README.md  run_official_examples.sh
tilelang_repo/: CMakeLists.txt
tilelang_repo/tilelang/: env.py
tilelang_repo/tools/blackhole_runner/: CMakeLists.txt  runner.cpp
(+155 files in other folders)
